--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
+body
+{
+	background-color: #DFE1E4;
+}
 #heading_div
 {
-	width: 100%;
-	background-color: #DFE1E4;
+	background-color: lightgrey;
+	margin: 15px;
 }
 #name_heading
 {
@@ -18,4 +22,35 @@
 {
 	float: left;
 	margin-left: 15px;
+}
+#education
+{
+	margin-top: 10px;
+}
+.heading
+{
+	padding: 10px;
+	font-size: 25px;
+	background-color: #FF9100;
+}
+.education_div
+{
+	background-color:lightgrey;
+	margin-top: 10px;
+	padding: 10px;
+}
+.education_heading
+{
+	font-size: 20px;
+	color: black;
+}
+.education_school
+{
+	font-size: 12px;
+	color: darkslategray;
+}
+.education_year
+{
+	font-size: 15px;
+	color: darkslategray;
 }
