--- a/css/drawer.css
+++ b/css/drawer.css
@@ -6,11 +6,15 @@
     display:flex;
     flex-direction: column;
 }
+.profile
+{
+    padding-top: 50px;
+}
 .drawer
 {
    background-color:#fafafa;
    height: 100vh;
-   display: flex;
+   display: inline-block;
    position: fixed;
    width: var(--drawer-size);
    max-width: 256px;
@@ -34,14 +38,13 @@
 .drawer nav
 {
     width: 100%;
-    padding-top: 50px;
 }
 .profile-pic-div
 {
     display: table;
     margin: auto;
 }
-.drawer nav img
+.drawer img
 {
     width: 100px;
     height: 100px;
@@ -72,10 +75,52 @@
 {
     margin-left: var(--drawer-size);  
 }
-@media(min-width:1280px)
+@media(min-width:1024px)
 {
     .content
     {
         margin-left: 256px;
+    }
+}
+@media(max-width:600px)
+{
+    .drawer
+    {
+        position: relative;
+        height: auto;
+        max-width: 100%;
+        width: 100%;
+    }
+    .content
+    {
+        margin-left: 0px;
+    }
+    .drawer nav
+    {
+        width: 100%;
+        padding: 10px;
+    }
+    .profile
+    {
+        padding-top: 0px;
+        display: flex;
+        margin: 10px 16px;
+    }
+    .profile-pic-div
+    {
+        margin: 0px;
+    }
+    .drawer img
+    {
+        width: 50px;
+        height: 50px;
+        box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
+        border-radius: 25px;
+    }
+    .name
+    {
+        font-size: 18px;
+        margin: auto 10px;
+        flex-grow: 1;
     }
 }
