--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,89 @@
-@charset "utf-8";
-/* CSS Document */
-body
+.container
 {
-	background-color: #DFE1E4;
+ padding: 32px;
+ height: 100%;
 }
-#heading_div
+#experience
 {
-	background-color: lightgrey;
-	margin: 15px;
-	border-radius: 5px;
-	box-shadow: 0.5px 0.5px 1px 0px;
-	display: flex;
-  	align-items: center;
-}
-#name_heading
-{
-	margin: auto;
-	text-align: center;
-	font-family: 'Skranji', cursive;
-}
-#profile_pic
-{
-	padding: 10px;
-	margin:auto;
-	float: left;
-	vertical-align: middle;
-	height: 150px;
-	width: 150px;
+    background-color: #4db6ac;
+    padding-bottom: 86px;
 }
 #education
 {
-	margin-top: 10px;
-}
-.heading
-{
-	padding: 10px 10px 10px 25px;
-	font-size: 25px;
-	background-color: #FF9100;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	box-shadow: 1px 1px 2px 0px;
-}
-.heading-details
-{
-	background-color: lightgrey;
-	margin: 0px 0px 15px 0px;
-	padding: 5px 15px 15px 15px;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
-	box-shadow: 1px 1px 2px 0px;
-}
-.education_div
-{
-	background-color:#DFE1E4;
-	margin: 10px;
-	padding: 10px 10px 10px 20px;
-	border-radius: 5px;
-}
-.education_heading
-{
-	font-size: 20px;
-	color: black;
-}
-.education_school
-{
-	font-size: 12px;
-	color: darkslategray;
-}
-.education_year
-{
-	font-size: 15px;
-	color: darkslategray;
+    background-color: #4db6ac;
+    padding-bottom: 86px;
 }
 #skills
 {
-	margin-top: 10px;
-}
-#skill_box li
-{
-	list-style-type: none;
-	padding: 10px 10px 10px 20px;
-	margin: 5px;
-	border-radius: 5px;
-	background-color:#DFE1E4;
-
+    background-color: rebeccapurple;
 }
 #projects
 {
-	margin-top: 10px;
-}
-#project_box
-{
-	margin-bottom: 10px;
-}
-.projects
-{
-	background-color: #DFE1E4;
-	padding: 0px 0px 10px 0px;
-	margin-top: 10px;
-	border-radius: 5px;
-/*	box-shadow: 1px 1px 2px 0px;*/
-}
-
-.project_title
-{
-	color: white;
-	font-size: 25px;
-	margin: 0px;
-	padding: 5px 5px 5px 25px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	background-color: grey;
-}
-.info_button
-{
-	background-color: darkgrey;
-	padding: 10.75px;
-	border-top-right-radius: 5px;
-}
-.projects li
-{
-	color: dimgrey;
-	margin-top: 5px;
-	padding-left: 25px
+    background-color: white;
 }
 #contact
 {
-	margin-top: 10px;
+    background-color: black;
 }
-#contact_details
+.heading
 {
-	padding-top: 20px;
-	text-align: center;
+    font-size: 38px;
+    margin-left: 32px;
 }
-.col-sm-6
+.skills
 {
-	padding: 5px;
+    max-width: 310px;
+    margin: auto auto 50px auto;
 }
-.col-sm-4
+#skills>h1
 {
-	padding: 0px;
+    color: #FAFAFA;
 }
-.col-lg-4
+.skills>div
 {
-	padding: 0px;
+ 
+  background: #FAFAFA;
+  padding: 16px; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 16px;
+  width: 250px;
+  display: inline-block;
+}
+.skills>div>div{
+    display: flex;
+}
+.skills>div>div>div{
+    margin: auto auto auto 10px;
+}
+.skills img
+{
+    height: 25px;
+}
+@media(max-width:600px)
+{
+    #experience
+    {
+        padding-bottom: 16px;
+    }
+}
+@media(min-width: 750px)
+{
+    .skills
+    {
+        max-width: 310px;
+    }
+}
+@media(min-width: 1033px)
+{
+    .skills
+    {
+        max-width: 633px;
+    }
+}
+@media(min-width: 1400px)
+{
+    .skills
+    {
+        max-width: 1000px;
+    }
 }
